* fix customScrollbar to adapt accent color based on current selected theme * modified content behavior   - fixed content height for pathname "/" only

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,41 +4,48 @@
   display        : flex;
   flex-direction : column;
   overflow       : hidden;
-
+  
   header {
-    position         : sticky;
-    height           : 60px;
-    top              : 0;
-    display          : flex;
-    align-items      : center;
-    justify-content  : space-between;
-    padding          : 0.5rem;
-    gap              : 0.5rem;
-    z-index          : 3;
-
+    position        : relative;
+    height          : 60px;
+    top             : 0;
+    display         : flex;
+    align-items     : center;
+    justify-content : space-between;
+    padding         : 0.5rem;
+    gap             : 0.5rem;
+    z-index         : 3;
+    
     > a {
       padding : 0;
     }
   }
-
+  
   main {
-    position         : relative;
-    width            : 100vw;
-    min-height       : calc(100vh - 100px);
-    display          : flex;
-    padding          : 2rem;
+    position : relative;
+    width    : 100vw;
+    display  : flex;
+    padding  : 1rem 0 1rem 2rem;
+    
+    .content-wrapper {
+      width      : 100%;
+      height     : 100%;
+      padding    : 0 2rem 0 0;
+      overflow-y : auto;
+      overflow-x : hidden;
+    }
   }
-
+  
   footer {
-    position         : sticky;
-    bottom           : 0;
-    z-index          : 1;
-    height           : 40px;
-    display          : flex;
-    align-items      : center;
-    padding          : 0.5rem;
-    font-size        : small;
-    font-weight      : 700;
+    position    : relative;
+    bottom      : 0;
+    z-index     : 1;
+    height      : 40px;
+    display     : flex;
+    align-items : center;
+    padding     : 0.5rem;
+    font-size   : small;
+    font-weight : 700;
   }
 }
 
@@ -46,13 +53,13 @@ body {
   &.dark {
     #react-ts-template {
       header {
-        border-bottom    : 10px solid v.$baseColorDark;
+        border-bottom : 10px solid v.$baseColorDark;
       }
-
+      
       footer {
-        border-top       : 10px solid v.$baseColorDark;
+        border-top : 10px solid v.$baseColorDark;
       }
-
+      
       header, footer {
         background-color : v.$accentColorDark;
       }
@@ -62,13 +69,13 @@ body {
   &.light {
     #react-ts-template {
       header {
-        border-bottom    : 10px solid v.$baseColor;
+        border-bottom : 10px solid v.$baseColor;
       }
-
+      
       footer {
-        border-top       : 10px solid v.$baseColor;
+        border-top : 10px solid v.$baseColor;
       }
-
+      
       header, footer {
         background-color : v.$accentColor;
       }
@@ -80,16 +87,28 @@ body {
   #react-ts-template {
     header > a {
       gap : 0.2rem;
-
+      
       > h3 {
         white-space : pre-wrap;
         width       : 114px;
         line-height : 0.9;
       }
     }
-
+    
     main {
-      padding : 0 1rem 1rem;
+      padding : 0 0 1rem 1rem;
+      
+      .content-wrapper {
+        width      : 100%;
+        height     : 100%;
+        padding    : 0 1rem 0 0;
+        overflow-y : auto;
+        overflow-x : hidden;
+      }
+    }
+    
+    .marquee {
+      width : calc(100% - 2rem);
     }
   }
 }
